# medsearch

./: .env.production.example  .gitignore  APM_KIBANA_DEPLOYMENT_PROOF.md  CHANGES_SUMMARY.md  CONTRIBUTING.md  DEMO_SCRIPT.md  DEMO_SETUP_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STRATEGY.md  DEPLOY_NOW.md  ELEVATOR_PITCH.md  FRONTEND_FIX_REPORT.md  HACKATHON_COMPLIANCE.md  HACKATHON_READY.md  ISSUE_RESOLVED.md  PILLAR2_IMPLEMENTATION.md  PILLAR3_IMPLEMENTATION.md  PILLAR4_IMPLEMENTATION.md  PRODUCTION_DEPLOYMENT.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SETUP.md  TECHNICAL_DETAILS.md  TESTING_GUIDE.md  UI_ENHANCEMENT_RECOMMENDATIONS.md  deploy-apm-kibana.sh  deploy.sh  docker-compose.prod.override.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  remote-deploy.sh
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  test_queries.py
backend/app/: __init__.py  main.py
backend/app/agents/: README.md  __init__.py  clinical_agent.py  drug_agent.py  query_analyzer.py  research_agent.py  state.py  synthesis_agent.py  workflow.py
backend/app/api/: __init__.py  citations.py  conversations.py  health.py  search.py
backend/app/core/: __init__.py  config.py  logging_config.py  safety.py
backend/app/database/: __init__.py  sqlite.py
backend/app/evaluation/: search_metrics.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  elasticsearch_service.py  mock_data_service.py  (+3 more)
backend/scripts/: secret_manager_setup.py
backend/tests/: __init__.py  test_agents.py  test_api.py  test_config.py  test_database.py  test_evaluation_metrics.py  test_main.py  test_pillar3.py  test_schemas.py
(+66 files in other folders)
